# fundsplit

./: .env.example  .gitignore  Cargo.toml  README.md  fund_workers.zsh
src/: main.rs
