[package]
name = "fundsplit"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "0.12.6", features = ["full"] }
alloy-chains = "0.1.69"
anyhow = "1.0.97"
async-trait = "0.1.88"
clap = { version = "4.0.16", features = ["derive"] }
dotenvy = "0.15.7"
hex = "0.4.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["alloc"] }
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json", "registry", "std"] }
